com.persistant-studios.popcornfx/Runtime/Scripts/Internal/PKFxManagedToNative.cs

//----------------------------------------------------------------------------
// Copyright Persistant Studios, SARL. All Rights Reserved. https://www.popcornfx.com/terms-and-conditions/
//----------------------------------------------------------------------------
using UnityEngine;
using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;
using System.IO;
using System.Text;
#if UNITY_EDITOR
using UnityEditor;
#endif

namespace PopcornFX
{
	[StructLayout(LayoutKind.Sequential)]
	public struct SMeshSamplerBaked
	{
		public IntPtr m_PkmmFileContent;
		public int m_PkmmFileContentSize;
		public int m_SubmeshId;
		public int m_BonesCount;
		public bool m_IsSkinned;
	};

	[StructLayout(LayoutKind.Sequential)]
	public struct SFxDesc
	{
		public string m_FxPath;
		public Matrix4x4 m_Transforms;
		public bool m_UsesMeshRenderer;
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct SCamDesc
	{
		public Matrix4x4 m_ViewMatrix;
		public Matrix4x4 m_ProjectionMatrix;
		public uint m_ViewportWidth;
		public uint m_ViewportHeight;
		public int m_RenderPass;
		public float m_NearClip;
		public float m_FarClip;
	}

	public enum EMeshVertexAttributes : int
	{
		Attrib_Normal = 0,
		Attrib_Tangent = 1,
		Attrib_Color = 2,
		Attrib_Texcoord = 3,
		Attrib_BonesIndicesAndWeights = 4,
	};

	[StructLayout(LayoutKind.Sequential)]
	public struct SPopcornFxSettings
	{
		public int m_DeviceType;

		public bool m_EnableFileLog;

		public bool m_EnableRaycastForCollisions;
		public bool m_DisableDynamicEffectBounds;
		public bool m_EnableGPUBillboarding;

		public bool m_EnableLocalizedPages;
		public bool m_EnableLocalizedByDefault;

		public bool m_FreeUnusedBatches;
		public uint m_FrameCountBeforeFreeingUnusedBatches;

		public bool m_IsUnitTesting;

		// Threading
		public bool m_SingleThreadedExecution;
		public bool m_OverrideThreadPool;
		public int m_WorkerCount;
		public IntPtr m_WorkerAffinities;
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct SMeshDataToFill
	{
		// ptr to the vertex/index buffers
		public int m_IdxCount;
		public IntPtr m_Indices;
		public int m_VtxCount;
		public IntPtr m_Positions;
		public IntPtr m_Normals;
		public IntPtr m_Tangents;
		public IntPtr m_UVs;
		public IntPtr m_Colors;

		// Skinning info
		public IntPtr m_VtxBonesWeights;
		public IntPtr m_VtxBonesIndices;
		public int m_BonesCount;
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct SCurveSamplerToFill
	{
		public IntPtr m_KeyPoints;
		public int m_CurveDimension;
		public int m_KeyPointsCount;
	};

	[StructLayout(LayoutKind.Sequential)]
	public struct STextureSamplerToFill
	{
		public IntPtr m_TextureData;
		public int m_Width;
		public int m_Height;
		public int m_SizeInBytes;
		public int m_PixelFormat;
		public int m_WrapMode;
	};

	[StructLayout(LayoutKind.Sequential)]
	public struct SStats
	{
		public float m_UpdateTime;
		public float m_RenderTime;
		public int m_TotalMemoryFootprint;
		public int m_TotalParticleMemory;
		public int m_UnusedParticleMemory;
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct SMirrorPackFxSettings
	{
		public string m_PopcornPackFxPath;
		public string m_UnityPackFxPath;
	}

	internal partial class PKFxManagerImpl : object
	{
		public const UInt32 POPCORN_MAGIC_NUMBER = 0x5AFE0000;

		#region plugin name and calling convention

#if (UNITY_IOS || UNITY_SWITCH) && !UNITY_EDITOR
	private const string kPopcornPluginName = "__Internal";
#elif UNITY_XBOXONE && !UNITY_EDITOR
	private const string kPopcornPluginName = "PK-UnityPlugin_XBoxOne";
#elif UNITY_GAMECORE_SCARLETT && !UNITY_EDITOR
	private const string kPopcornPluginName = "PK-UnityPlugin_XBoxSeries";
#else
		private const string kPopcornPluginName = "PK-UnityPlugin";
#endif

#if (UNITY_WINRT || UNITY_SWITCH) && !UNITY_EDITOR
	public const CallingConvention kCallingConvention = CallingConvention.Cdecl;
#else
		public const CallingConvention kCallingConvention = CallingConvention.Winapi;
#endif
		#endregion

#if UNITY_SWITCH && !UNITY_EDITOR
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		protected static extern void RegisterPlugin();
#endif
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern IntPtr GetRenderEventFunc();
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern int PopcornFXDllLoaded();
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void PopcornFXStartup(ref SPopcornFxSettings settings);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void PopcornFXShutdown();
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void SetMaxLogStack(int maxLogStack);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern int UnstackLog(StringBuilder dstBuffer, int dstSize, ref int logSeverity);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void SetMaxCameraCount(int number);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void UpdateCamDesc(int camID, ref SCamDesc desc, bool update);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void UpdateParticles(float DT);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void SyncParticlesSimulation();
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void TransformAllParticles(Vector3 worldOffset);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void GetStats(ref SStats stats);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void PreloadFxIFN(string path, int usesMeshRenderer);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern int InstantiateFx(ref SFxDesc fxDesc);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern int StartFx(int guid, float dt, float prewarm);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool TerminateFx(int guid);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool StopFx(int guid);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool KillFx(int guid);
		// Exported Event
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool RegisterExportedEvent(int guid, string eventName, int unityKey);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool UnregisterExportedEvent(int guid, string eventName, int unityKey);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void UnregisterEffectAllExportedEvent(int guid);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void UnregisterSceneAllExportedEvent();

		// For the attributes:
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern IntPtr EffectGetAttributesBuffer(int guid);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool EffectUpdateAttributes(int guid);

		// For the samplers shape:
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool EffectSetSamplerShapeTransform(int guid, int samplerId, Matrix4x4 transform);
		// Mesh sampler:
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern IntPtr GetMeshDataToFillFromSampler(int vertexCount, int indexCount, int bonesCount, int samplingInfo);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool EffectSetMeshSampler(int guid, int samplerId, IntPtr meshSampler, Vector3 size, bool async);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool EffectSetMeshSamplerBaked(int guid, int samplerId, ref SMeshSamplerBaked meshSamplerBaked, Vector3 size, bool async);
		// Skinning:
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern IntPtr EffectUpdateSamplerSkinningSetMatrices(int guid, int samplerId);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool EffectBeginUpdateSamplerSkinning(int guid, int samplerId, float dt);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool EffectEndUpdateSamplerSkinning(int guid, int samplerId);
		// Other sampler shapes:
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool EffectSetSamplerShape(int guid, int samplerId, Sampler.EShapeType shapeType, Vector3 size);
		// Sampler curve:
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern IntPtr GetCurveSamplerData(int keyPointsCount, int curveDimension);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool EffectSetCurveSampler(int guid, int samplerId, IntPtr curveSampler);
		// Sampler texture:
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern IntPtr GetTextureSamplerData(int byteSize);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool EffectSetTextureSampler(int guid, int samplerId, IntPtr textureSampler);
		// Sampler text:
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool EffectSetTextSampler(int guid, int samplerId, string text);
		// Any sampler:
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool EffectResetDefaultSampler(int guid, int samplerId);
		// ----------------------------------

		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool EffectSetTransforms(int guid, Matrix4x4 tranforms);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool LoadPkmmAsSceneMesh(string pkmmVirtualPath);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void SceneMeshClear();
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void WriteProfileReport(string path);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void ProfilerSetEnable(bool enable);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void Reset();
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void DeepReset();
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void UnloadFx(string path);
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern void ClearAllCallbacks();
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern IntPtr GetRuntimeVersion();

#if UNITY_EDITOR
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool PopcornFXEditorStartup();
		// Browse an effect content to create the Unity asset:
		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
		public static extern bool BrowseEffectContent(IntPtr pkfxContentPtr, int contentByteSize, string path);

		[DllImport(kPopcornPluginName, CallingConvention = kCallingConvention)]
